// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StoreBaseModal component Snapshot matches when is loading 1`] = `
<basemodal-stub
  dismissible="true"
  information="<p>Some content</p>"
>
  <div
    class="wrapper"
    style="max-height: 920px;"
  >
    <div>
      <span
        class="title"
      >
        
        
      
      </span>
       
      <img
        alt=""
        class="logo"
        src=""
      />
    </div>
     
    <div
      class="content contentloader"
    >
      <simpleloader-stub />
    </div>
  </div>
</basemodal-stub>
`;

exports[`StoreBaseModal component Snapshot matches when is not loading 1`] = `
<basemodal-stub
  dismissible="true"
  information="<p>Some content</p>"
>
  <div
    class="wrapper loadingMaxHeight"
    style="max-height: 920px;"
  >
    <div>
      <span
        class="title"
      >
        
        
      
      </span>
       
      <img
        alt=""
        class="logo"
        src=""
      />
    </div>
     
    <div
      class="content"
    >
      <div />
    </div>
  </div>
</basemodal-stub>
`;

exports[`StoreBaseModal component Snapshot matches when is on desktop 1`] = `
<basemodal-stub
  dismissible="true"
  information="<p>Some content</p>"
>
  <div
    class="wrapper loadingMaxHeight"
    style="max-height: 920px;"
  >
    <div>
      <span
        class="title"
      >
        
        
      
      </span>
       
      <img
        alt=""
        class="logo"
        src=""
      />
    </div>
     
    <div
      class="content"
    >
      <div />
    </div>
  </div>
</basemodal-stub>
`;

exports[`StoreBaseModal component Snapshot matches when is on mobile 1`] = `
<basemodal-stub
  dismissible="true"
  information="<p>Some content</p>"
>
  <div
    class="wrapper loadingMaxHeight"
    style="max-height: 920px;"
  >
    <div>
      <span
        class="title"
      >
        
        
      
      </span>
       
      <img
        alt=""
        class="logo"
        src=""
      />
    </div>
     
    <div
      class="content showScroll"
    >
      <div />
    </div>
  </div>
</basemodal-stub>
`;
